--- a/Git_to_Salesforce/src/classes/git.cls
+++ b/Git_to_Salesforce/src/classes/git.cls
@@ -1,3 +1,8 @@
 public with sharing class git {
+	
+	public list<Account> accs{get;set;}
     
+  publlic git(){
+  	accs=[select id,name from account limit 25];
+  }
 }
